# nntrainer

./: .gitignore  CLAUDE.md  FINAL_SOLUTION.md  IMPLEMENTATION_SUMMARY.md  MESON_OPTIONS.md  MoE_Layer_Tensor_Optimization.md  MoE_Optimization_Summary.md  Q4_0_OPTIMIZATION.md  README.md  SINGLE_THREAD_MODE.md  SOLUTION_SUMMARY.md  TEMPLATE_CONFLICT_SOLUTION.md  android_opencl_optional.patch  android_opencl_optional_patch.md  main_thread_patch.cpp  meson.build  meson_options.txt  moe_layer_header_optimization.diff  moe_layer_header_tensor_optimization.diff  moe_layer_optimization.diff  moe_layer_tensor_optimization.diff  nntrainer_main_thread.patch  nntrainer_main_thread_final.patch  optimize_omp_settings.sh  optional_main_thread.patch  simple_usage_example.cpp  test_compile.sh  test_main_thread  test_main_thread.cpp  test_optimizations  test_q4_0_performance.cpp  test_softmax_fp16.cpp  usage_example.cpp
.claude/: settings.json  setup-env.sh
Applications/: meson.build
Applications/CausalLM/: ANDROID_PERFORMANCE_GUIDE.md  README.md  android_memory_optimizer.cpp  android_memory_optimizer.h  android_optimization_config.json  android_optimize.sh  build_android.sh  build_api_android.sh  build_api_lib.sh  build_api_test_app.sh  build_server.sh  build_test_app.sh  build_tokenizer_android.sh  causal_lm.cpp  causal_lm.h  chat_template.cpp  factory.h  gpt_oss_causallm.cpp  gpt_oss_causallm.h  gpt_oss_config_example.json  huggingface_tokenizer.cpp  install_android.sh  llm_util.cpp  llm_util.hpp  lora_train.cpp  lora_train.h  main.cpp  main_lora_train.cpp  meson.build  quantize.cpp  qwen3_apex.cpp  qwen3_apex.h  qwen3_apex_with_first_load.cpp  qwen3_apex_with_first_load.h  repeat_perf_test.py  run_api_test_android.sh  run_exp.sh  run_exp_gsm8k.sh  run_exp_gsm8k_specific.sh  run_multiple_tests.sh  (+4 more)
Applications/CausalLM/api/: README.md  SENTENCE_TRANSFORMER_API.md  causal_lm_api.cpp  causal_lm_api.h  model_config.cpp  model_config_internal.h  test_api.cpp  test_embedding_api.cpp
Applications/CausalLM/jni/: Android.mk  Android_api.mk  meson.build
Applications/CausalLM/layers/: FP16_OPTIMIZATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  android_fp16_kernels.h  causallm_common_properties.h  embedding_layer.cpp  embedding_layer.h  embedding_normalize_layer.cpp  embedding_pooling_layer.cpp  expert_prefetcher.h  gpt_oss_moe_layer_cached.cpp  gpt_oss_moe_layer_cached_optimized.cpp  lm_head.cpp  meson.build  mha_core.cpp  mha_core.h  qkv_layer.cpp  qwen_moe_layer.cpp  qwen_moe_layer.h  qwen_moe_layer_apex.cpp  qwen_moe_layer_apex.h  qwen_moe_layer_apex_cached.cpp  qwen_moe_layer_apex_dh_cache.cpp  qwen_moe_layer_cached.cpp  qwen_moe_layer_cached.h  qwen_moe_layer_cached_extra.cpp  qwen_moe_layer_cached_opt.h  qwen_moe_layer_cached_optimized.cpp  qwen_moe_layer_fsu.cpp  qwen_moe_layer_fsu.h  qwen_moe_optimizations.h  reshaped_rms_norm.cpp  reshaped_rms_norm.h  rms_norm.cpp  rms_norm.h  shadow_mha_core.cpp  shadow_mha_core.h  swiglu.cpp  swiglu.h  test_moe_optimization.cpp  tie_word_embedding.cpp  (+1 more)
Applications/CausalLM/layers/jni/: meson.build
Applications/CausalLM/models/: QNN_TRANSFORMER_README.md  causal_lm.cpp  causal_lm.h  embedding.cpp  embedding.h  meson.build  performance_metrics.cpp  performance_metrics.h  qnn_transformer.cpp  qnn_transformer.h  sentence_transformer.cpp  sentence_transformer.h  transformer.cpp  transformer.h  transformer_base.h  types.h
Applications/CausalLM/models/bert/: bert_transformer.cpp  bert_transformer.h
Applications/CausalLM/models/gemma3/: gemma3_causallm.cpp  gemma3_causallm.h
Applications/CausalLM/models/gpt_oss/: gptoss_causallm.cpp  gptoss_causallm.h
Applications/CausalLM/models/gpt_oss_cached_slim/: gptoss_cached_slim_causallm.cpp  gptoss_cached_slim_causallm.h
Applications/CausalLM/models/qnn/: meson.build  qnn_causal_lm.cpp  qnn_causal_lm.h  qnn_transformer.cpp  qnn_transformer.h
Applications/CausalLM/models/qwen2/: qwen2_causallm.cpp
Applications/CausalLM/models/qwen3/: qwen3_causallm.cpp  qwen3_causallm.h
Applications/CausalLM/models/qwen3_cached_slim_moe/: qwen3_cached_slim_moe_causallm.cpp  qwen3_cached_slim_moe_causallm.h
Applications/CausalLM/models/qwen3_moe/: qwen3_moe_causallm.cpp  qwen3_moe_causallm.h
Applications/CausalLM/models/qwen3_omni_moe/: meson.build  qwen3_omni_moe_causallm.cpp  qwen3_omni_moe_causallm.h
Applications/CausalLM/models/qwen3_shadow/: meson.build  qwen3_shadow_causallm.cpp  qwen3_shadow_causallm.h
Applications/CausalLM/models/qwen3_slim_moe/: qwen3_slim_moe_causallm.cpp  qwen3_slim_moe_causallm.h
Applications/CausalLM/models/timm_vit/: timm_vit_transformer.cpp  timm_vit_transformer.h
Applications/CausalLM/res/: README_weight_converter.md  weight_converter.py
Applications/CausalLM/res/qwen3-30b-a3b/: nntr_config.json
Applications/CausalLM/res/qwen3-omni/qwen3-omni-30b-a3b/: compare_outputs.py  config.json  generation_config.json  nntr_config.json  test_e2e.py  weight_converter.py
Applications/CausalLM/res/qwen3/qwen3-0.6b/: README.md  config.json  generate_dummy_weights.py  generation_config.json  nntr_config.json  run_pipeline.sh  weight_converter.py
Applications/CausalLM/res/qwen3/qwen3-0.6b/w4e4a32/: combine.sh  nntr_config.json
Applications/CausalLM/res/qwen3/qwen3-30b-a3b/: weight_converter.py
Applications/CausalLM/res/qwen3/qwen3-4b/: nntr_config.json  weight_converter.py
Applications/CausalLM/test/: generate_reference.py  generate_test_weights.py  meson.build  test_causallm_qwen3.cpp  unittest_causallm.cpp  unittest_causallm_api.cpp
Applications/CausalLM/test/res/: test_tokenizer.json
Applications/CausalLMAndroidDemo/app/src/main/cpp/: CMakeLists.txt  causallm_jni.cpp
Applications/mezo/jni/: main.cpp  meson.build  mnist_loader.cpp  mnist_loader.h
benchmarks/: PERFORMANCE_REPORT.md  benchmark_attention_kernels.cpp  meson.build
nntrainer/graph/: checkpoint_block.cpp  checkpoint_block.h  connection.cpp  graph_core.cpp  graph_core.h  graph_node.h  meson.build  network_graph.cpp  network_graph.h  subgraph_base.cpp  subgraph_base.h  subgraph_cpu.cpp  subgraph_cpu.h
(+297 files in other folders)
